# tmpmail-python

./: .gitignore  LICENCE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
tmpmail/: main.py
tmpmail/api/: base.py  one_sec_mail.py
